<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_mine_bg"
    android:gravity="center"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/fl_user_header_container"
        android:layout_width="match_parent"
        android:layout_height="@dimen/user_header_height"
        android:background="@drawable/mine_header_bg">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_marginTop="@dimen/tab_height"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.github.ybq.android.spinkit.SpinKitView
                android:id="@+id/skv_nav_loading"
                style="@style/SpinKitView.Small.ThreeBounce"
                android:layout_width="@dimen/tab_height"
                android:layout_height="@dimen/tab_height"
                android:layout_gravity="center"
                android:layout_marginEnd="8dp"
                android:visibility="gone"
                app:SpinKit_Color="@color/colorSilenceLoading"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>


    <!--性别、身高、体重、生日-->
    <LinearLayout
        android:id="@+id/ll_user_body_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/user_info_margin_horizontal"
        android:layout_weight="1"
        android:orientation="vertical">

        <!--性别-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingVertical="@dimen/user_info_item_padding_vertical">

            <ImageView
                android:id="@+id/iv_gender"
                android:layout_width="@dimen/user_info_item_icon_size"
                android:layout_height="@dimen/user_info_item_icon_size"
                android:paddingVertical="@dimen/user_info_item_icon_padding_vertical"
                android:scaleType="fitCenter"
                android:src="@drawable/male"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_title_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/user_info_item_inner_ele_margin"
                android:gravity="center_vertical"
                android:hint="@string/user_gender"
                android:text="@string/user_gender"
                android:textAlignment="center"
                android:textColor="@color/color_mine_label_title"
                android:textSize="@dimen/user_info_item_label_font_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/iv_gender"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/user_info_item_inner_ele_margin"
                android:gravity="center_vertical"
                android:hint="@string/user_male"
                android:text="@string/user_male"
                android:textAlignment="center"
                android:textColor="@color/color_mine_value_title"
                android:textSize="@dimen/user_info_item_value_font_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toLeftOf="@id/ar_gender"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/ar_gender"
                android:layout_width="@dimen/user_info_item_right_arrow_size"
                android:layout_height="@dimen/user_info_item_right_arrow_size"
                android:src="@drawable/next"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/color_separate_line" />
        <!--身高-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_height"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingVertical="@dimen/user_info_item_padding_vertical">

            <ImageView
                android:id="@+id/iv_height"
                android:layout_width="@dimen/user_info_item_icon_size"
                android:layout_height="@dimen/user_info_item_icon_size"
                android:paddingVertical="@dimen/user_info_item_icon_padding_vertical"
                android:scaleType="fitCenter"
                android:src="@drawable/height"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_title_height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/user_info_item_inner_ele_margin"
                android:gravity="center_vertical"
                android:hint="@string/user_height"
                android:text="@string/user_height"
                android:textAlignment="center"
                android:textColor="@color/color_mine_label_title"
                android:textSize="@dimen/user_info_item_label_font_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/iv_height"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/user_info_item_inner_ele_margin"
                android:gravity="center_vertical"
                android:hint="@string/user_height"
                android:textAlignment="center"
                android:textColor="@color/color_mine_value_title"
                android:textSize="@dimen/user_info_item_value_font_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toLeftOf="@id/ar_height"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/ar_height"
                android:layout_width="@dimen/user_info_item_right_arrow_size"
                android:layout_height="@dimen/user_info_item_right_arrow_size"
                android:src="@drawable/next"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/color_separate_line" />
        <!--体重-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingVertical="@dimen/user_info_item_padding_vertical">

            <ImageView
                android:id="@+id/iv_weight"
                android:layout_width="@dimen/user_info_item_icon_size"
                android:layout_height="@dimen/user_info_item_icon_size"
                android:paddingVertical="@dimen/user_info_item_icon_padding_vertical"
                android:scaleType="fitCenter"
                android:src="@drawable/weight"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_title_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/user_info_item_inner_ele_margin"
                android:gravity="center_vertical"
                android:hint="@string/user_weight"
                android:text="@string/user_weight"
                android:textAlignment="center"
                android:textColor="@color/color_mine_label_title"
                android:textSize="@dimen/user_info_item_label_font_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/iv_weight"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/user_info_item_inner_ele_margin"
                android:gravity="center_vertical"
                android:hint="@string/user_weight"
                android:textAlignment="center"
                android:textColor="@color/color_mine_value_title"
                android:textSize="@dimen/user_info_item_value_font_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toLeftOf="@id/ar_weight"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/ar_weight"
                android:layout_width="@dimen/user_info_item_right_arrow_size"
                android:layout_height="@dimen/user_info_item_right_arrow_size"
                android:src="@drawable/next"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/color_separate_line" />
        <!--生日-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_birth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingVertical="@dimen/user_info_item_padding_vertical">

            <ImageView
                android:id="@+id/iv_birth"
                android:layout_width="@dimen/user_info_item_icon_size"
                android:layout_height="@dimen/user_info_item_icon_size"
                android:paddingVertical="@dimen/user_info_item_icon_padding_vertical"
                android:scaleType="fitCenter"
                android:src="@drawable/birth"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_title_birth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/user_info_item_inner_ele_margin"
                android:gravity="center_vertical"
                android:hint="@string/user_birth"
                android:text="@string/user_birth"
                android:textAlignment="center"
                android:textColor="@color/color_mine_label_title"
                android:textSize="@dimen/user_info_item_label_font_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/iv_birth"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_birth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/user_info_item_inner_ele_margin"
                android:gravity="center_vertical"
                android:hint="@string/user_birth"
                android:textAlignment="center"
                android:textColor="@color/color_mine_value_title"
                android:textSize="@dimen/user_info_item_value_font_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toLeftOf="@id/ar_birth"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/ar_birth"
                android:layout_width="@dimen/user_info_item_right_arrow_size"
                android:layout_height="@dimen/user_info_item_right_arrow_size"
                android:src="@drawable/next"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</LinearLayout>